<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- DISCIPLINA -->
    <string name="discipline">Disciplina</string>
    <string name="disciplines">Disciplinas</string>
    <string name="hint_discipline_name">Nome da Disciplina</string>
    <string name="hint_teacher_name">Nome do Professor</string>
    <string name="new_discipline">Nova Disciplina</string>
    <string name="add_discipline">Adicionar Disciplina</string>
    <string name="confirm_delete_discipline">Deseja remover esta disciplina?</string>
    <string name="edit_discipline">Editar Disciplina</string>
    <string name="alphabetical_order">Ordenar alfabeticamente</string>
    <string name="total_tasks_order">Ordenar por tarefas</string>
    <string name="no_grades">, Ainda está sem notas</string>

    <!-- ATIVIDADE -->
    <string name="add_homework">Adicionar Trabalho</string>
    <string name="tasks">Atividades</string>
    <string name="group_homework">Atividade em grupo</string>
    <string name="add_classmate">Adicionar contato</string>
    <string name="next_activity">Próxima Atividade:</string>
    <string name="title">Título</string>
    <string name="priority">Prioridade</string>
    <string name="obtained_grade">Nota</string>
    <string name="error_message">Data ou descrição invalida, por favor verifique os dados</string>
    <string name="no_next_activity">Não há atividades próximas</string>
    <string name="date_order">Ordenar por data</string>
    <string name="priority_order">Ordenar por prioridade</string>
    <string name="new_homework">Novo Trabalho</string>
    <string name="confirm_delete_task">Deseja remover a atividade?</string>
    <string name="description">Descrição: </string>

    <!-- PROVA -->
    <string name="add_test">Adicionar Prova</string>
    <string name="new_exam">Nova Prova</string>

    <!-- DESEMPENHO -->
    <string name="performance">Desempenho</string>

    <!-- GERAIS -->
    <string name="app_name">aNotai</string>
    <string name="invalid_name">Invalid name</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Salvar</string>
    <string name="action_settings">Opções</string>
    <string name="ask_description">Adicione uma descrição</string>
    <string name="label_title">Título</string>
    <string name="date">Data</string>
    <string name="edit">Editar</string>
    <string name="delete">Excluir</string>
    <string name="confirm">OK</string>    
    <string name="yes">Sim</string>
    <string name="not">Não</string>
    
    <drawable name="actionbar_background">#81F7BE</drawable>
    <color name="color_title">#FFFFFF</color>
    <color name="color_big_text">#6E6E6E</color>
    
    
    <string name="activities">Atividades</string>

</resources>
