<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_title"/>

    <EditText
        android:id="@+id/et_name_homework"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <Spinner
        android:id="@+id/sp_discipline_select_ah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/discipline_select"
        android:hint="@string/discipline_select" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_date" />

    <EditText
        android:id="@+id/et_deadline_date_ah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et_homework_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/ask_description" />

    <CheckBox
        android:id="@+id/check_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_homework" />

    <Button
        android:id="@+id/bt_add_classmate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_classmate" />

    <ListView
        android:id="@+id/lv_classmate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

    <Button
        android:id="@+id/bt_create_homework"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>
