<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_name_discipline"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.40"
            android:gravity="top"
            android:hint="@string/hint_discipline_name"
            android:textColorHint="#808080"
            android:inputType="text"
            android:maxLength="40"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_Cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="1dp"
            android:layout_weight="0.5"
            android:background="@android:color/holo_green_dark"
            android:text="@string/cancel"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/bt_ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="1dp"
            android:layout_weight="0.5"
            android:background="@android:color/holo_green_light"
            android:text="@string/save"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>